<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
    <TextView android:text="@string/new_game_header" style="@style/headerText" />
    <TextView android:text="@string/new_game_description" style="@style/defaultText" />

    <!-- show the form with parameters inside a scrollbar 
            FIXME: using marginTop="-70dip" and layout_height="70dip" as trick/hack to show 
            FIXME: something below an element that has layout_height="fill_parent"
            FIXME: (that also has layout_marginBottom="70dip" to left some space) -->
    <ScrollView android:layout_marginLeft="10dip"
            android:layout_marginBottom="70dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            
        <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                
            <!-- set type -->
            
            <TextView android:text="@string/new_game_type_prompt" style="@style/promptText" />
            <RadioGroup android:id="@+id/new_game_type"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                <RadioButton android:id="@+id/new_game_type_single"
                        android:text="@string/new_game_type_single"
                        style="@style/new_game_radiobutton"
                        android:onClick="buttonAction" />
                <RadioButton android:id="@+id/new_game_type_network_host"
                        android:text="@string/new_game_type_network_host"
                        style="@style/new_game_radiobutton"
                        android:onClick="buttonAction" />
                <RadioButton android:id="@+id/new_game_type_network_join"
                        android:text="@string/new_game_type_network_join"
                        style="@style/new_game_radiobutton"
                        android:onClick="buttonAction" />
            </RadioGroup>
            
            <!-- set name -->
            
            <TextView android:text="@string/new_game_playername_prompt" style="@style/promptText"/>
            <EditText android:id="@+id/new_game_player_name"
                    android:text="@string/new_game_playername_default"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
                    
            <!-- set number of players: -->
            
            <TextView android:text="@string/new_game_playercount_prompt" style="@style/promptText" />
            <EditText android:id="@+id/new_game_playercount"
                    android:layout_width="fill_parent"
                    android:inputType="numberSigned"
                    android:layout_height="wrap_content"/>    
        </LinearLayout>
    </ScrollView>


    <!-- continue button 
            FIXME: using marginTop="-70dip" and layout_height="70dip" as trick/hack to show 
            FIXME: something below an element that has layout_height="fill_parent"
            FIXME: (that also has layout_marginBottom="70dip" to left some space) -->
    <RelativeLayout android:layout_marginTop="-70dip"
            android:layout_height="70dip"
            android:gravity="bottom"
            android:layout_width="fill_parent"> 
        <Button android:id="@+id/new_game_go2game"
                android:text="@string/new_game_go2game"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="buttonAction" />
    </RelativeLayout>

</LinearLayout>
